Kleinigkeiten Layout , Rechtschreibfehler

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ github_username: wolust
 reddit_username:
 bitbucket_username:
 stackoverflow_id:
-twitter_username: wolust
+twitter_username: wolug
 skype_username:
 steam_nickname:
 google_plus_id: +StefanHöhn
