--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:       wolust@untergang.de
 author:      Stefan Höhn
 description: "Der Wormser Linux User Stammtisch trifft sich jeden 1. Dienstag im Monat"
 baseurl:     ""
-url:         "https://wolust.github.io"
+url:         "https://wolust.de"
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
