--- a/_data/review.yaml
+++ b/_data/review.yaml
@@ -4,7 +4,7 @@ linuxuser:
   
   - monat: '09'
     inhalt: >-
-     04.09.2018 Froscon - was gabs zum sehen - interessante Vorträge, Wine kann Windows Programme mit Dongel nicht, Esoterisches mit Mond und Erdstrahlen, Kritik an neuer Wolust-Webseite jetzt auch unter wolust.de zu finden
+     04.09.2018 Froscon - was gabs zu sehen - interessante Vorträge, Wine kann Windows Programme mit Dongel nicht, Esoterisches mit Mond und Erdstrahlen, Kritik an neuer Wolust-Webseite jetzt auch unter wolust.de zu finden
   - monat: '08'
     inhalt: >-
      7.08.2018 Statische Webseiten Generatoren Pico und Jekyll. Neue Webseite https://wolust.github.io auf mehreren Geräten getestet. Tastatur in Großbritannien, Self-checkout, Bezahlen mit Sparkassenapp, Pihole
