--- a/_config.yml
+++ b/_config.yml
@@ -1,76 +1,50 @@
-# Site settings
-title:       Wormser Linux User Stammtisch
-email:       wolust@untergang.de
-author:      Stefan Höhn
-description: "Der Wormser Linux User Stammtisch trifft sich jeden 1. Dienstag im Monat"
-baseurl:     ""
-url:         "https://wolust.de"
-date_format: "%b %-d, %Y"
+title: Wormser Linux User Stammtisch
+email: wolust@untergang.de
+author: Stefan Höhn
+description: Der Wormser Linux User Stammtisch trifft sich jeden 1. Dienstag im Monat
+baseurl: ''
+url: 'https://wolust.de'
+date_format: '%b %-d, %Y'
 header_pages:
- - about.md
- - contact.html
-
-# Google services
-google_verification:
-# Use either direct GA implementation or set up GTM account
-# - using both will skew your data (leave blank to not use at all)
-google_analytics:
-google_tag_manager:
-# Bing services
-bing_verification:
-
-# Optional features
-animated:             true
-show_related_posts:   false
-show_post_footers:    false
-show_social_icons:    true
+  - about.md
+  - help.md
+google_verification: null
+google_analytics: null
+google_tag_manager: null
+bing_verification: null
+animated: true
+show_related_posts: false
+show_post_footers: false
+show_social_icons: true
 ajaxify_contact_form: true
 enable_mathjax: false
 extended_fonts: true
 enable_anchorjs: false
-# Preview image for social media aka og:image and twitter:image
 post_preview_image: true
-
-# Facebook Page integration
-# (for instant articles and other stuff)
 fb_page: false
-fb_page_id:
-
-# Disqus post comments
-# (leave blank to disable Disqus)
-disqus_shortname:
-
-# txtpen post comments
-# (leave blank to disable txtpen)
-txtpen_sitename:
-
-# Facebook Comments plugin
-# (leave blank to disable Facebook Comments, otherwise set it to true)
-facebook_comments:
-facebook_appid:
+fb_page_id: null
+disqus_shortname: null
+txtpen_sitename: null
+facebook_comments: null
+facebook_appid: null
 facebook_comments_number: 10
-
-# Social icons
 github_username: wolust
-reddit_username:
-bitbucket_username:
-stackoverflow_id:
+reddit_username: null
+bitbucket_username: null
+stackoverflow_id: null
 twitter_username: wolug
-skype_username:
-steam_nickname:
+skype_username: null
+steam_nickname: null
 google_plus_id: +StefanHöhn
-linkedin_username:
-angellist_username:
-medium_id:
-bitcoin_url:
-paypal_url:
-flattr_button:
-telegram_username:
-vk_id:
-
-# Post sharing icons
+linkedin_username: null
+angellist_username: null
+medium_id: null
+bitcoin_url: null
+paypal_url: null
+flattr_button: null
+telegram_username: null
+vk_id: null
 show_sharing_icons: false
-# Change to 'true' to enable individual icons
 share_facebook: false
 share_twitter: true
 share_googleplus: true
@@ -80,52 +54,51 @@ share_tumblr: false
 share_reddit: false
 share_stumbleupon: false
 share_hackernews: false
-
 text:
   pagination:
-    newer: 'Newer'
-    older: 'Older'
+    newer: Newer
+    older: Older
   share_buttons:
-    text:         'Share this post!'
-    facebook:     'Share on Facebook'
-    twitter:      'Share on Twitter'
-    googleplus:   'Share on Google+'
-    linkedin:     'Share on LinkedIn'
-    digg:         'Share on Digg'
-    tumblr:       'Share on Tumblr'
-    reddit:       'Share on Reddit'
-    stumbleupon:  'Share on StumbleUpon'
-    hackernews:   'Share on Hacker News'
+    text: Share this post!
+    facebook: Share on Facebook
+    twitter: Share on Twitter
+    googleplus: Share on Google+
+    linkedin: Share on LinkedIn
+    digg: Share on Digg
+    tumblr: Share on Tumblr
+    reddit: Share on Reddit
+    stumbleupon: Share on StumbleUpon
+    hackernews: Share on Hacker News
   post:
-    updated:        'Updated'
-    minute_read:    'Lesezeit'
-    related_posts:  'Related Posts'
+    updated: Updated
+    minute_read: Lesezeit
+    related_posts: Related Posts
   index:
-    coming_soon: 'Coming soon...'
+    coming_soon: Coming soon...
   contact:
-    email:    'Email Address'
-    content:  'lolo98?'
-    subject:  'New submission!'
-    submit:   'Sag Hallo !'
+    email: Email Address
+    content: lolo98?
+    subject: New submission!
+    submit: Sag Hallo !
     ajax:
-      sending:  'sending..'
-      sent:     'Message sent!'
-      error:    'Error!'
-  thanks: 'Thanks for contacting us. We will reply as soon as possible.'
-  og_locale: 'en_US'
-
-# Build settings
-markdown:     kramdown
+      sending: sending..
+      sent: Message sent!
+      error: Error!
+  thanks: Thanks for contacting us. We will reply as soon as possible.
+  og_locale: en_US
+markdown: kramdown
 redcarpet:
-  extensions: ['smart', 'tables', 'with_toc_data']
-permalink:    pretty
-paginate:     4
+  extensions:
+    - smart
+    - tables
+    - with_toc_data
+permalink: pretty
+paginate: 4
 sass:
   style: compressed
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-# https://github.com/jekyll/jekyll/issues/2938
 exclude:
   - Gemfile
   - Gemfile.lock
