Google Termine ld/json auf der index Seite / Seite empfehlen auf nächste Tux / kleine Textänderungen

--- a/_config.yml
+++ b/_config.yml
@@ -45,21 +45,21 @@ flattr_button: null
 telegram_username: null
 vk_id: null
 show_sharing_icons: false
-share_facebook: false
+share_facebook: true
 share_twitter: true
 share_googleplus: true
-share_linkedin: false
-share_digg: false
-share_tumblr: false
-share_reddit: false
-share_stumbleupon: false
-share_hackernews: false
+share_linkedin: true
+share_digg: true
+share_tumblr: true
+share_reddit: true
+share_stumbleupon: true
+share_hackernews: true
 text:
   pagination:
     newer: Newer
     older: Older
   share_buttons:
-    text: Share this post!
+    text: Teile diese Webseite!
     facebook: Share on Facebook
     twitter: Share on Twitter
     googleplus: Share on Google+
