--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ date_format: '%b %-d, %Y'
 header_pages:
   - about.md
   - help.md
-google_verification: null
+google_verification: 'fdVYZrBjcMeFQK5MnFi4WhNe3-RVaVgjMZvh6ekvItM'
 google_analytics: null
 google_tag_manager: null
 bing_verification: null
