Datum erstellt und geändert hinzugefügt

--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ text:
     stumbleupon: Share on StumbleUpon
     hackernews: Share on Hacker News
   post:
-    updated: Updated
+    updated: Geändert
     minute_read: Min. Lesezeit
     related_posts: Related Posts
   index:
