--- a/_data/review18.yaml
+++ b/_data/review18.yaml
@@ -2,7 +2,7 @@ linuxuser:
   
   - monat: '11'
     inhalt: >-
-     Test November
+     06.11.2018 Piandmore Stände und Vorträge, Gitlab auf dem Raspberry Pi funktioniert nicht, Github und Travis-CI, LORA-WAN + ESP32, Calliope, InfrarotKameras, Eigenes CMS mit PHP entwickeln. 
   - monat: '10'
     inhalt: >-
      02.10.2018 RaspberryPi und Docker. RaspberryPi und Objekt Verfolgung mit Kamera. Die Vorteile von RST gegenüber Markdown. Windows in VM. Onewire am Raspberry Pi. Wolust Webseite Termine ab jetzt im data.yaml , Logicanalyser und SPI
