--- a/_data/review18.yaml
+++ b/_data/review18.yaml
@@ -1,7 +1,7 @@
 linuxuser:
   - monat: '12'
     inhalt  >-
-      04.12.1018 kommt noch
+     04.12.1018 C++ und Pointer, Javascript Bibliothek für Sudoku, Tim Berners-Lee das neue Internet mit Bsp.,MQTT und Apache, NSA hört uns ab, Nach dem Studium?, Zertifikat für alles mögliche.
   - monat: '11'
     inhalt: >-
      06.11.2018 Piandmore Stände und Vorträge, Gitlab auf dem Raspberry Pi funktioniert nicht, Github und Travis-CI, LORA-WAN + ESP32, Calliope, InfrarotKameras, Eigenes CMS mit PHP entwickeln. 
