--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ sudo: false
 rvm:
  - 2.4
 script:
+ - bundle exec htmlproofer ./_site
  - bundle exec jekyll build
  - grep post-title         _site/index.html
  - grep pagination-item    _site/index.html
