--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
  - 2.4
 script:
  - bundle exec jekyll build
+ - bundle exec htmlproofer  --allow-hash-href ./_site
  - grep post-title         _site/index.html
  - grep pagination-item    _site/index.html
  - grep 404                _site/404.html
