--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ date_format : '%-d . %m . %Y %H:%M'
 header_pages:
   - map.md
   - help.md
+  
+lolo: 'lolo is amaster'  
 google_verification: 'fdVYZrBjcMeFQK5MnFi4WhNe3-RVaVgjMZvh6ekvItM'
 google_analytics: null
 google_tag_manager: null
