--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+repository: wolust
 title: Wormser Linux User Stammtisch
 email: wolust@untergang.de
 author: Stefan Höhn
@@ -103,6 +104,7 @@ sass:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-github-metadata
   
 exclude:
   - Gemfile
