--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -10,7 +10,7 @@ linuxuser:
         <li>Python oder Ruby</li>
         <li>Beschleunigungssensor und Arduino</li>
         <li>Als Logger. Im EEPROM Werte direkt Byteweise speichern</li>
-        <li>Mobile Apps Softwaretests</li>
+        <li>Mehrere isolierte LANs und Sicherheit in Großbetrieben</li>
         <li>Die Bahn. Verbindung Frankfurt - Köln ist richtig schnell </li>
         <li>Vorteile von kleinen Wolust-Treffen</li>
       </ul>
