--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -3,14 +3,15 @@ linuxuser:
     inhalt: > 
       <h3>02.04.2019</h3>
       <ul>
-        <li>Android, Apps, Repsositries Bsp.: F-Droid und Blokada</li>
+        <li>Android, Apps, Repositries Bsp.: F-Droid und Blokada</li>
         <li>Spielzeugfahrzeug installieren und programmieren mit Python und Processing</li>
         <li>ESP32 Programmieren mit Arduino und Mikropython</li>
-        <li>Solid Dezentrales Internet ,was funktioniert schon.</li>
+        <li>Solid Dezentrales Internet;was funktioniert schon.</li>
         <li>Softwaretests</li>
         <li>Alte Computerspiele und Emulatoren. Spiele bei archive.org</li>
         <li>Social Networks und Mastodon</li>
-        <li>Arbeitsplätze erhalten durch verhindern der Fertigstellung? </li>
+        <li>Raspberry Pi Desktop auf alten Notebooks</li>
+        <li>Arbeitsplätze erhalten durch verhindern der Fertigstellung von Projekten? </li>
       </ul>
   - monat: '03'    
     inhalt: > 
