--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -1,4 +1,16 @@
 linuxuser:
+  
+  - monat: '05'    
+    inhalt: > 
+      08.05.2019
+      
+        <ul><li>Proxmox kann Server installieren (Bsp.nextcloud)</li>
+        <li>Solid Grundlagen und Beispiele</li>
+        <li>USB-Stecker mit MicroSD für Handy/li>
+        <li>Realtime Linux</li>
+        <li><LibreELEC auf dem Raspberry Pi/li>
+        <li>kommt noch</li></ul>
+        
   - monat: '04a'    
     inhalt: > 
       16.04.2019
