--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -8,7 +8,7 @@ linuxuser:
         <li>Solid Grundlagen und Beispiele</li>
         <li>USB-Stecker mit MicroSD für Handy/li>
         <li>Realtime Linux</li>
-        <li><LibreELEC auf dem Raspberry Pi/li>
+        <li><LibreELEC auf dem Raspberry Pi</li>
         <li>kommt noch</li></ul>
         
   - monat: '04a'    
