--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -6,9 +6,9 @@ linuxuser:
       
         <ul><li>Proxmox kann Server installieren (Bsp.nextcloud)</li>
         <li>Solid Grundlagen und Beispiele</li>
-        <li>USB-Stecker mit MicroSD für Handy/li>
+        <li>USB-Stecker mit MicroSD für Handy</li>
         <li>Realtime Linux</li>
-        <li><LibreELEC auf dem Raspberry Pi</li>
+        <li>LibreELEC auf dem Raspberry Pi</li>
         <li>kommt noch</li></ul>
         
   - monat: '04a'    
