Ja, ceph gabs auch noch

--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -9,7 +9,7 @@ linuxuser:
         <li>USB-Stecker mit MicroSD für Handy</li>
         <li>Realtime Linux</li>
         <li>LibreELEC auf dem Raspberry Pi</li>
-        <li>kommt noch</li></ul>
+        <li>Ceph ist ein hoch-verfügbares, verteiltes und robustes Dateisystem</li></ul>
         
   - monat: '04a'    
     inhalt: > 
