Juni stammtisch 2019 thema katzen

--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -11,7 +11,8 @@ linuxuser:
         <li>USV /APC Selbsttest nie bei leerem Akku</li>
         <li>Android Termux Shell auf dem Smartphone</li>
         <li>Veranstaltungen: GPN / Froscon / Piandmore</li>
-        <li>Git und die API von github Bsp.Pullrequest</li></ul>
+        <li>Git und die API von github Bsp.Pullrequest</li>
+        <li>Katzen,zu Hause und auf der jagd</li></ul>
         
   - monat: '05'    
     inhalt: > 
