--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -3,7 +3,7 @@ linuxuser:
     inhalt: > 
       06.08.2019
         <ul><li>Freie Energie Baukasten</li>
-        <li>Arabisch UTF-8 include in Windows /li>
+        <li>Arabisch UTF-8 include in Windows </li>
         <li>Docker mit Wndows_95, Solid, und mehr.></li>
         <li>Schieberegister/li>
         <li>VHS -Worms sollten wir probieren</li>
