--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -3,8 +3,8 @@ linuxuser:
     inhalt: > 
       06.08.2019
         <ul><li>Freie Energie Baukasten</li>
-        <li>Arabisch UTF-8 include in Windows </li>
-        <li>Docker mit Wndows_95, Solid, und mehr.></li>
+        <li>Arabisch UTF-8 include in Windows</li>
+        <li>Docker mit Wndows_95, Solid, und mehr.</li>
         <li>Schieberegister</li>
         <li>VHS -Worms sollten wir probieren</li>
         <li>Podcastempfehlung  Linux</li>
