--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -2,7 +2,7 @@ linuxuser:
   - monat: '08'    
     inhalt: > 
       06.08.2019
-        <ul><li>Freie Energie Baukasten</li>
+        <ul><li>Freie Energie Baukasten ist Quatsch</li>
         <li>Arabisch UTF-8 include in Windows</li>
         <li>Docker mit Wndows_95, Solid, und mehr.</li>
         <li>Schieberegister</li>
