--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -5,7 +5,7 @@ linuxuser:
         <ul><li>Freie Energie Baukasten ist Quatsch</li>
         <li>Arabisch UTF-8 include in Windows</li>
         <li>Dockercontainer mit Wndows_95, Solid, und mehr.</li>
-        <li>Schieberegister für Mascinensteuerung</li>
+        <li>Schieberegister für Maschinensteuerung</li>
         <li>VHS-Worms sollten wir probieren</li>
         <li>Podcastempfehlung  Linux</li>
         <li>snap plötzlich alles loop-gemountet</li>
