--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -1,4 +1,12 @@
 linuxuser:
+  - monat: '08a'    
+    inhalt: > 
+      20.08.2019
+        <ul><li>Zusammenarbeit mit VHS-Worms</li>
+        <li>Kursleiterformular ausfüllen</li>
+        <li>Dezember Vortrag zusammenstellen</li>
+        <li>Struktur und Planung von Veranstaltungen</li></ul>
+
   - monat: '08'    
     inhalt: > 
       06.08.2019
