--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -1,4 +1,17 @@
 linuxuser:
+  - monat: '10'    
+    inhalt: > 
+      01.10.2019
+        <ul><li>UKW Weinheim/Piandmore </li>
+        <li>Smartwatch für 15€ Kamera Bluetooth Livetest</li>
+        <li>huginn sowas wie Ifttt nur zum Selbsthosten</li>
+        <li>Scratch für Arduino selbst programmiert mit Java / Processing</li>
+        <li>Früher: ZX81 Programmieren in Basic sowas wie "Angry Bird"</li>
+        <li>Früher: GFA-Basic Programm öffnet im Window: midi und Animation</li>
+        <li>RMS tritt zurück Hintergründe</li>
+        <li>Rechner mit Ubuntu für die Eltern ist eine gute Idee</li> 
+        <li>Traben-Trarbach mehr als ein Tor Exitnode?</li></ul>
+
   - monat: '09'    
     inhalt: > 
       03.09.2019
