--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -3,7 +3,7 @@ linuxuser:
     tag: '03'
     monat: '12'
     jahr: '2019'
-    ort: wahrscheinlich VHS Worms Raum 29
+    ort: Raum 29 der VHS-Worms Neusatzschule
   - meeting: Weitere Treffen
     tag: '07'
     monat: '01'
