Article in jso+ld repariert. Jede Webseite  hat jetzt die richtigen  strukturierten Daten. Google, freu dich mal !

--- a/_data/review-2019.yaml
+++ b/_data/review-2019.yaml
@@ -18,7 +18,7 @@ linuxuser:
         <li>Smartwatch für 15€ Kamera Bluetooth Livetest</li>
         <li>huginn sowas wie Ifttt nur zum Selbsthosten</li>
         <li>Scratch für Arduino selbst programmiert mit Java / Processing</li>
-        <li>Früher: ZX81 Programmieren in Basic sowas wie "Angry Bird"</li>
+        <li>Früher: ZX81 Programmieren in Basic sowas wie Angry_Bird</li>
         <li>Früher: GFA-Basic Programm öffnet im Window: midi und Animation</li>
         <li>RMS tritt zurück Hintergründe</li>
         <li>Rechner mit Ubuntu für die Eltern ist eine gute Idee</li> 
