--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -1,21 +1,21 @@
 linuxuser:
   - meeting: Nächstes Treffen
-    tag: '03'
-    monat: '12'
-    jahr: '2019'
-    ort: Raum 31 der VHS-Worms Neusatzschule
-    strasse: Willi-Brandt-Ring 5
-  - meeting: Weitere Treffen
     tag: '07'
     monat: '01'
     jahr: '2020'
     ort: Times-Cafe Worms
     strasse: Ludwigsplatz
-    letztes: '1'
   - meeting: Weitere Treffen
     tag: '04'
     monat: '02'
     jahr: '2020'
     ort: Times-Cafe Worms
     strasse: Ludwigsplatz
+    letztes: '1'
+  - meeting: Weitere Treffen
+    tag: '03'
+    monat: '03'
+    jahr: '2020'
+    ort: Computerlabor des VHS-Worms Neusatzschule
+    strasse: Willi-Brandt-Ring 5
     letztes: '2'
