--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -1,21 +1,21 @@
 linuxuser:
   - meeting: Nächstes Treffen
-    tag: '03'
-    monat: '03'
-    jahr: '2020'
-    ort: Computerlabor des VHS-Worms Neusatzschule
-    strasse: Willy-Brandt-Ring 5
-  - meeting: Weitere Treffen
     tag: '07'
     monat: '04'
     jahr: '2020'
-    ort: Times-Cafe Worms
+    ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: '1'
   - meeting: Weitere Treffen
     tag: '05'
     monat: '05'
     jahr: '2020'
-    ort: Times-Cafe Worms
+    ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: '2'
+  - meeting: Weitere Treffen
+    tag: '02'
+    monat: '06'
+    jahr: '2020'
+    ort: Computerlabor des VHS-Worms Neusatzschule
+    strasse: Willy-Brandt-Ring 5
