1. Uhrzeit ist jetzt die  Variable  <start> in daten.yaml  (19:30 war hardcoded) 2. Pfad von Post geändert  Variable Categories erzeugt jetzt /linux /worms (sinnvol) 3. Opacity in map geändert 0.2  nach 0.1  (besser lesbar) 4. Map Optimierung IF-Abfragen

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -2,20 +2,23 @@ linuxuser:
   - meeting: Nächstes Treffen
     tag: '07'
     monat: '04'
-    jahr: '2020'
+    jahr: 2020
     ort: Timescafe Worms
     strasse: Ludwigsplatz
-    letztes: '1'
+    letztes: 1
+    start: '19:30 Uhr'
   - meeting: Weitere Treffen
     tag: '05'
     monat: '05'
-    jahr: '2020'
+    jahr: 2020
     ort: Timescafe Worms
     strasse: Ludwigsplatz
-    letztes: '2'
+    letztes: 2
+    start: '19:30 Uhr'
   - meeting: Weitere Treffen
     tag: '02'
     monat: '06'
-    jahr: '2020'
+    jahr: 2020
     ort: Computerlabor des VHS-Worms Neusatzschule
     strasse: Willy-Brandt-Ring 5
+    start: '19:00 Uhr'
