Metatag description jetzt aktualisiert  immer mit Datum/Ort für den nächster Stammtisch

--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,8 @@ text:
       error: Error!
   thanks: Thanks for contacting us. We will reply as soon as possible.
   og_locale: de_DE
+feed:
+   excerpt_only: true  
 markdown: kramdown
 redcarpet:
   extensions:
