Stammtisch April 2020 fällt aus

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -3,8 +3,8 @@ linuxuser:
     tag: '07'
     monat: '04'
     jahr: 2020
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
+    ort:  Timescafe fällt aus!
+    strasse: Wir planen eine Videokonferenz
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
